--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="card">
             <div class="profile-section">
                 <div class="avatar">D</div>
-                <h1 class="name">Hello, I'm Deepak!</h1>
+                <h1 class="name">Hello, I'm Vinit!</h1>
                 <p class="title">AI/ML Developer | Flutter Developer | Frontend Engineer</p>
             </div>
 
